tests/paczka1/fuzzy1/90413755.err
Error in line 3: YNc29WMA4Ho S336 34,1
Error in line 14: NLO0I A973 96,6
Error in line 18: NLO0I A593 91,4
Error in line 22: NLO0I A973 77,8
Error in line 19: A593 A973 368,6
Error in line 15: hcEJE S336 35,5
Error in line 24: 7HDG A943 66,4
Error in line 31: ht5pBFvbS S336 10,2
